SOC-3095: fix bug alignement

--- a/webapp/resources/src/main/webapp/skin/less/social.less
+++ b/webapp/resources/src/main/webapp/skin/less/social.less
@@ -50,8 +50,11 @@
 			overflow: hidden;
 		}
 	}
-	.btn {
-		margin: 0 0 0 10px;
+	.connectionBtn {
+		line-height: 28px;	
+		.btn {
+			margin: 0 0 0 10px;
+		}
 	}
 }
 
